[project]
name = "meeting_transcriber"
version = "0.1.0"
description = "This is meeting transcriber that takes in .mp4 files, strips the audio, runs through gpt-4o-transcribe and returns transcript. The app is wrapped in API"
requires-python = ">=3.10"
dependencies = [
    "pydub",
    "fastapi",
    "requests",
    "python-dotenv"
]